kubernetes/k3s-01/workloads/grocy/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
        - name: grocy
          image: docker.io/linuxserver/grocy:4.7.1@sha256:71226f43e18b15836833075c15c9d5d51d81a2a4fc38d56bb1dc05f34970cc80
          volumeMounts:
            - name: grocy-data
              mountPath: /config
      volumes:
        - name: grocy-data
          persistentVolumeClaim:
            claimName: grocy-data
