kubernetes/k3s-01/workloads/grocy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: grocy
