kubernetes/k3s-01/workloads/grocy/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grocy
  namespace: grocy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grocy.47fc5c.com`)
      kind: Rule
      services:
        - name: grocy
          kind: Service
          port: 80
          scheme: http
  tls:
    secretName: grocy-certificate
